syntax = "proto3";

option java_package = "ie.app.minimap.data.proto";
option java_multiple_files = true;

// Node
message NodeProto {
  int64 id = 1;
  int64 floor_id = 2;
  string type = 3;
  float x = 4;
  float y = 5;
  string label = 6;
  string cloud_anchor_id = 7;
  int64 created_at = 8;
}